# deepearth

./: .gitignore  COLLISION_TRACKING_GUIDE.md  EARTH4D_GRID_DOCUMENTATION.md  INSTALL.md  LICENSE  README.md  README_COLLISION_UPDATES.md  SPECIFICATIONS.MD  analyze_earth4d_collisions.py  collision_tracking_design.py  hello_deepearth_training.txt  install.sh  launch_training.sh  pyproject.toml  setup_collision_tracking.sh  train_deepearth_verbose.py
core/: README.md  config.py  inference.py  main.py  multimodal_fusion.py  preprocessor.py  sampling.py  train.sh  trainer.py
dashboard/: .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUBDOMAIN.md  README.md  data_cache.py  dataset_config.json  deepearth-optimized.service  deepearth_dashboard.py  huggingface_data_loader.py  mmap_embedding_loader.py  prepare_embeddings.py  requirements.txt  run_production.sh  run_server.py  setup_dashboard.py  umap_optimized.py
dashboard/api/: __init__.py  error_handling.py
dashboard/scripts/: deploy_to_server.sh  fix-remote-performance.sh
dashboard/services/: __init__.py  app_initialization.py  attention_processing.py  color_processing.py  ecosystem_processing.py  (+9 more)
docs/: coordinate_conventions.md
encoders/: __init__.py
encoders/xyzt/hashencoder/: backend.py  backend_tracking.py  hashgrid.py  hashgrid_with_tracking.py  pyproject.toml  setup.py  setup_patched.py  setup_with_tracking.py
encoders/xyzt/hashencoder/src/: bindings.cpp  bindings_simple.cpp  bindings_with_tracking.cpp  hashencoder.cu  hashencoder.h  hashencoder_with_tracking.cu  hashencoder_with_tracking.h
geospatial/: README.md  data_structures.py  geo2xyz.py  geofusion.py  make_lite_transforms.py  utils.py
lfmc_collision_analysis/: earth4d_collision_analysis.csv
reconstruction/: gaussian_splat.py  geofusion_dataset.py  interactive_visualizer.py
training/: README.md  train_classifier.py
visualization/: __init__.py
(+120 files in other folders)
