[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepearth"
version = "0.1.0"
description = "DeepEarth: Geospatial Deep Simulator of Earth's Ecosystems"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: GIS",
]

# Add core dependencies here as the project evolves
# Example:
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "gsplat",
    "torchvision",
    "pillow",
    "tqdm",
    "tifffile",
    "open3d",
    "imagecodecs"  # For TIFF LZW decompression
    # Add other core dependencies like PIL, matplotlib, etc.
]

[project.urls]
"Homepage" = "https://github.com/ecodash/deepearth" # Replace with actual URL if different
"Bug Tracker" = "https://github.com/ecodash/deepearth/issues" # Replace if different

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
    "isort",
    "mypy",
]
# Add other optional dependency groups like 'docs', 'vis', etc.

[tool.setuptools.packages.find]
where = ["src"] 